Fix header layout on small screen size

--- a/styles/page-modules/_header.scss
+++ b/styles/page-modules/_header.scss
@@ -135,7 +135,7 @@ header {
 @media screen and (min-width: 481px) {
   header {
     ul {
-      height: 42px;
+      min-height: 42px;
 
       li {
         margin-top: 4px;
